--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "tiny-lr-fork": "0.0.5"
   },
   "devDependencies": {
+    "chokidar": "^0.8.2",
     "grunt": "^0.4.4",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-release": "^0.7.0"
